--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/framer-motion@10.16.4/dist/framer-motion.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="preloader.css">
+    <link rel="stylesheet" href="music-player.css">
     <script src="preloader.js"></script>
     <script>
         tailwind.config = {
@@ -634,5 +635,6 @@
     <script src="navbar-loader.js"></script>
     <script src="footer-loader.js"></script>
     <script src="script.js"></script>
+    <script src="music-player.js"></script>
 </body>
 </html>
