--- a/kids.html
+++ b/kids.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Лучшие места для отдыха с детьми в Актау и окрестностях - парки, аквапарки, развлекательные центры">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="preloader.css">
+    <link rel="stylesheet" href="music-player.css">
     <script src="preloader.js"></script>
     <style>
         :root {
@@ -315,5 +316,6 @@
     <script src="navbar-loader.js"></script>
     <script src="footer-loader.js"></script>
     <script src="script.js"></script>
+    <script src="music-player.js"></script>
 </body>
 </html>
