--- a/index.html
+++ b/index.html
@@ -283,10 +283,10 @@
                         Добро пожаловать
                     </p>
                 <h1 class="text-6xl md:text-8xl lg:text-9xl font-black mb-6 text-shadow-lg tracking-wider leading-none">
-                        В АКТАУ
+                        В JETI
                     </h1>
                 <p class="text-lg md:text-xl mb-12 text-shadow-md opacity-90 max-w-3xl mx-auto font-medium">
-                        Актау — город солнца, моря и невероятных пейзажей на берегу Каспийского моря.
+                    Откройте вкус Актау с лучшим рестораном города
                     </p>
                     <div class="flex justify-center">
                         <button class="bg-gradient-to-r from-orange-500 to-red-500 hover:from-orange-600 hover:to-red-600 text-white font-bold py-4 px-8 rounded-full text-lg md:text-xl transition-all duration-300 transform hover:scale-105 shadow-2xl">
