--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="preloader.css">
     <link rel="stylesheet" href="music-player.css">
+    <link rel="stylesheet" href="promo-button.css">
     <script src="preloader.js"></script>
     <script>
         tailwind.config = {
@@ -937,5 +938,6 @@
     <script src="script.js"></script>
     <script src="all-places.js"></script>
     <script src="music-player.js"></script>
+    <script src="promo-button.js"></script>
 </body>
 </html>
