--- a/index.html
+++ b/index.html
@@ -938,6 +938,7 @@
     <script src="script.js"></script>
     <script src="all-places.js"></script>
     <script src="music-player.js"></script>
+    <script src="confetti.js"></script>
     <script src="promo-button.js"></script>
 </body>
 </html>
