--- a/index.html
+++ b/index.html
@@ -540,13 +540,13 @@
                     Откройте вкус Актау с лучшим рестораном города
                     </p>
                     <div class="flex justify-center">
-                        <a href="#featured-restaurant" class="jeti-cta-btn">
+                        <button id="open-menu-btn" type="button" class="jeti-cta-btn">
                             <span></span>
                             <span></span>
                             <span></span>
                             <span></span>
                             Посмотреть меню
-                        </a>
+                        </button>
                 </div>
             </div>
         </div>
@@ -936,6 +936,7 @@
     <script src="navbar-loader.js"></script>
     <script src="footer-loader.js"></script>
     <script src="script.js"></script>
+    <script src="menu-overlay.js"></script>
     <script src="all-places.js"></script>
     <script src="music-player.js"></script>
     <script src="confetti.js"></script>
