--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🧭 Памятка туриста: Актау | JETI MEIRAMHANA</title>
+    <!-- Open Graph / Social preview -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Памятка туриста: Актау | JETI MEIRAMHANA">
+    <meta property="og:description" content="Актау — гид по локациям, ресторанам, детям, природе и полезной информации. Откройте вкус Актау с JETI.">
+    <meta property="og:image" content="https://static.tildacdn.com/tild3263-3131-4062-b561-393935303933/___2.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Памятка туриста: Актау | JETI MEIRAMHANA">
+    <meta name="twitter:description" content="Актау — гид по локациям, ресторанам, детям, природе и полезной информации.">
+    <meta name="twitter:image" content="https://static.tildacdn.com/tild3263-3131-4062-b561-393935303933/___2.png">
+    <!-- Favicon / Touch icon -->
+    <link rel="icon" href="https://static.tildacdn.com/tild3263-3131-4062-b561-393935303933/___2.png" type="image/png">
+    <link rel="apple-touch-icon" href="https://static.tildacdn.com/tild3263-3131-4062-b561-393935303933/___2.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/framer-motion@10.16.4/dist/framer-motion.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
